[package]
name = "sat_toasty_helper"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A utility library for more-easily writing SAT constraints."
keywords = ["sat", "constraint solving"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sat_toasty_helper"
path = "src/lib.rs"

[dependencies]
splr = "0.17.0"
